remove old figures

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -23,6 +23,6 @@ author:
 citation:
     type: article
     # container-title: "Journal of Data Science Software"
-    url: https://camilogarciabotero.github.io/biocomp/blog/
+    url: https://camilogarciabotero.github.io/biocomp/blog
 
 google-scholar: true
