--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -3,6 +3,8 @@
 # freeze computational output
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
 freeze: true
+execute: 
+  cache: true
 
 # Enable banner style title blocks
 title-block-banner: true
@@ -26,3 +28,5 @@ citation:
     url: https://camilogarciabotero.github.io/biocomp/blog
 
 google-scholar: true
+
+fig-align: center
