update citation link on metadata

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -25,7 +25,7 @@ author:
 citation:
     type: article
     # container-title: "Journal of Data Science Software"
-    url: https://camilogarciabotero.github.io/biocomp/blog
+    url: https://camilogarciabotero.github.io/blog
 
 google-scholar: true
 
